[package]
name = "vcheck-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface"]
description= "My Rustacean implementation of my password checker, VCheck."
homepage = "https://github.com/angeldollface/vcheck.rs"
repository = "https://github.com/angeldollface/vcheck.rs"
documentation = "https://github.com/angeldollface/vcheck.rs"
readme = "README.markdown"
keywords = ["cli"]
categories = ["web-app"]
exclude = ["/.github"]

[dependencies]
gloo = "0.8.0"
flek = "1.4.0"
wasm-bindgen = "0.2.83"
yew = { version = "0.20.0", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.60", features = [ "HtmlInputElement" ] }
libssh2-sys = { version = "0.3.0", features = ["vendored-openssl"] }
